Removed a few warnings