@@ -217,7 +217,7 @@ public class QDataBaseEntityMessage extends QDataMessage implements Comparable<Q
 	 */
 	public void setItems(final BaseEntity[] items) {
 		this.items = Arrays.asList(items);
-		setReturnCount(new Long(items.length));
+		setReturnCount(Long.valueOf(items.length));
 	}
 
 	
@@ -226,7 +226,7 @@ public class QDataBaseEntityMessage extends QDataMessage implements Comparable<Q
 	 */
 	public void setItems(final List<BaseEntity> items) {
 		this.items = items;
-		setReturnCount(new Long(items.size()));
+		setReturnCount(Long.valueOf(items.size()));
 	}
 
 	/**
